# cloudflare-auth-hasher-template

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  mise.local.example.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
bench/: package.json
bench/results/: example.json  schema.json
bench/results/profiles/2026-03-10/: README.md  free-safe-probe-parity-baseline.json  free-safe-probe-parity-baseline.md  free-safe-probe-rust-full-focused.json  free-safe-probe-rust-full-focused.md  free-safe-probe-rust-full-stress.json  free-safe-probe-rust-full-stress.md  free-safe-probe-ts-rust-wasm-focused.json  free-safe-probe-ts-rust-wasm-focused.md  free-safe-probe-ts-rust-wasm-stress.json  free-safe-probe-ts-rust-wasm-stress.md  standard-recommended-finalists-cpu-tail.json  standard-recommended-finalists-cpu-tail.md  standard-recommended-finalists.json  standard-recommended-finalists.md  standard-recommended-ts-rust-wasm-focused.json  standard-recommended-ts-rust-wasm-focused.md
bench/src/: run-cpu-tail.ts  run-local.ts  summarize.ts
crates/hash-core/: Cargo.toml
crates/hash-core/src/: lib.rs
crates/rust-wasm-kernel/: Cargo.toml
docs/: benchmarks.md  deployment.md  security-and-operations.md  using-from-workers.md
docs/releases/: v0.1.0.md  v0.1.1.md
examples/better-auth/: auth-password-hasher.ts  wrangler.caller.jsonc
examples/better-auth-worker/: README.md  worker-configuration.d.ts  wrangler.jsonc
examples/better-auth-worker/src/: index.ts
examples/rpc-caller-worker/: README.md  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
examples/rpc-caller-worker/src/: index.ts
kernels/assemblyscript/: README.md  asconfig.json  package.json
kernels/assemblyscript/assembly/: index.ts
scripts/: build-kernel.mjs  check-examples.mjs  deploy-workers.mjs  generate-example-types.mjs  run-wrangler.mjs  typecheck-examples.mjs
src/: fetch-handler.ts  index.test.ts  index.ts  kernel.test.ts  kernel.ts  lib.rs  rust-wasm-kernel.build.json  rust-wasm-kernel.wasm
workers/binding-gateway/: README.md  package.json  worker-configuration.d.ts  wrangler.jsonc
workers/binding-gateway/.wrangler/cache/: cf.json
workers/binding-gateway/src/: index.test.ts  index.ts
workers/rust-full/: Cargo.toml  README.md  package.json  wrangler.jsonc
workers/rust-full/src/: lib.rs
workers/ts-direct/: README.md  package.json  worker-configuration.d.ts  wrangler.jsonc
workers/ts-direct/src/: hasher.test.ts  hasher.ts  index.ts
workers/ts-rust-wasm/: README.md  package.json  wrangler.jsonc
workers/ts-rust-wasm/src/: index.ts  kernel-node.ts  kernel.test.ts
(+3 files in other folders)
