[package]
name = "cloudflare-auth-hasher-template"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reusable Rust-based Argon2id password hasher for Cloudflare Workers service bindings."
repository = "https://github.com/imjlk/cloudflare-auth-hasher-template"

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
scrypt = "0.11"
subtle = "2.6"
unicode-normalization = "0.1"
worker = "0.7"
worker-macros = "0.7"

[profile.release]
lto = true
strip = true
codegen-units = 1

