[workspace]
members = [
  "crates/hash-core",
  "crates/rust-wasm-kernel"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/imjlk/cloudflare-auth-hasher-template"

[workspace.dependencies]
argon2 = "0.5"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.6"
unicode-normalization = "0.1"
wasm-bindgen = "0.2"
worker = "0.7"
worker-macros = "0.7"
