[package]
name = "auth-hasher-hash-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared password hashing core for the Cloudflare auth hasher workspace."

[features]
default = ["random-salt"]
random-salt = ["dep:getrandom"]

[dependencies]
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
getrandom = { workspace = true, optional = true }
hex.workspace = true
scrypt = { version = "0.11", default-features = false }
subtle.workspace = true
unicode-normalization.workspace = true
