[package]
name = "auth-hasher-rust-full"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Full Rust Cloudflare Worker candidate for the auth hasher benchmark workspace."

[lib]
crate-type = ["cdylib"]

[dependencies]
auth-hasher-hash-core = { path = "../../crates/hash-core" }
js-sys.workspace = true
serde.workspace = true
url = "2.5"
wasm-bindgen.workspace = true
worker.workspace = true
worker-macros.workspace = true
